<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_booking" />

    <item
        android:id="@+id/navigation_cab"
        android:icon="@drawable/car"
        android:title="@string/title_cab" />
    <item
        android:id="@+id/navigation_driver"
        android:icon="@drawable/driver"
        android:title="@string/title_driver" />

    <item
        android:id="@+id/navigation_route"
        android:icon="@drawable/route"
        android:title="@string/title_route" />

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/more"
        android:title="@string/title_more" />


</menu>