<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_booking">

    <fragment
        android:id="@+id/navigation_booking"
        android:name="com.cabbooking.ui.booking.BookingFragment"
        android:label="@string/title_booking"
        tools:layout="@layout/fragment_booking" />
    <fragment
        android:id="@+id/navigation_cab"
        android:name="com.cabbooking.ui.cab.CabFragment"
        android:label="@string/title_cab"
        tools:layout="@layout/fragment_cab" />
    <fragment
        android:id="@+id/navigation_driver"
        android:name="com.cabbooking.ui.driver.DriverFragment"
        android:label="@string/title_driver"
        tools:layout="@layout/fragment_driver" />


</navigation>