<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottomSheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_white_rounded_bottom_sheet"
            android:paddingHorizontal="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/more"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:fontFamily="@font/poppins_semibold"
                android:padding="@dimen/_10dp"
                android:text="@string/more"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintBottom_toTopOf="@id/profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/profile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_80sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:fontFamily="@font/poppins_semibold"
                android:padding="@dimen/_10dp"
                android:text="@string/profile"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintBottom_toTopOf="@id/support"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/support"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_80sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:fontFamily="@font/poppins_semibold"
                android:padding="@dimen/_10dp"
                android:text="@string/support"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintBottom_toTopOf="@id/setting"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/setting"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_80sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:fontFamily="@font/poppins_semibold"
                android:padding="@dimen/_10dp"
                android:text="@string/setting"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintBottom_toTopOf="@id/feedback"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/feedback"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_80sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:fontFamily="@font/poppins_semibold"
                android:padding="@dimen/_10dp"
                android:text="@string/feedback"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>